# israeli-tax-refund-calculator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
rest/: endpoints.py
tax_authority_api/: const.py  rest.py  schemes.py  utils.py
tax_documents_parser/: __init__.py  utils.py
templates/: index.html
